--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,9 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+ClimbCloud/Library/
+ClimbCloud/Logs/
+ClimbCloud/.vsconfig
+ClimbCloud/Temp/
+ClimbCloud/UserSettings/
+ClimbCloud/obj/
